# aligntk

./: #Makefile.in#  Makefile.in  README  align.c  apply_map.c  best_affine.c  best_rigid.c  clean_maps.cc  combine_masks.c  compare_images.c  compare_maps.c  compose_maps.c  compute_mapping.c  compute_mapping.h  config.h.in  configure  configure.ac  dt.c  dt.h  extrapolate_map.c  find_rst.c  font.pgm  gen_imaps.c  gen_mask.c  gen_pyramid.c  imio.c  imio.diff  imio.h  inspector.cc  invert.c  libpar.c  merge_images.c  ortho.c  prun.c  reduce.c  reduce_mask.c  register.c  transform.c
axon/: applymap4.c  imio2.c  libpar.c  par.h  reduce_mask.c  register.c  warp3.c  warp3n.c  warp3r.c  warp3r.old.c
axon1/: align10.c  align11.c  align12.6jan10.c  align12.7jan10.c  align12.axon.c  align12.c  align12.kollman.c  align12.new.c  applymap.c  applymap.old.c  applymap2mask.c  applymap3.c  applymap3.good.c  applymap4.26jan10.c  applymap5.c  bestaffine.c  bestquad.c  bestrigid.c  blend_maps.c  colorize_tif.c  compare_maps.c  compose_maps.c  compute_mapping.h  computemapping.c  construct_maplist.c  corr.c  crop.c  cross.c  dicer.c  dt.c  dt.old.c  dtp.c  dtp.h  extrapolate_map.c  filter.c  findmissing.c  first.axon.c  first.c  fixmapsizes.c  fold.c  (+58 more)
checkdir/: check.sh  images.lst  maps.lst  pairs.lst
checkdir/aligned.correct/: size  z00.tif  z01.tif  z02.tif  z03.tif  z04.tif  z05.tif  z06.tif  z07.tif  z08.tif  z09.tif  z10.tif  z11.tif  z12.tif  z13.tif  z14.tif  z15.tif
checkdir/aligned_yz.correct/: x512.tif
checkdir/amaps.correct/: z00.map  z01.map  z02.map  z03.map  z04.map  z05.map  z06.map  z07.map  z08.map  z09.map  z10.map  z11.map  z12.map  z13.map  z14.map  z15.map
checkdir/cmaps.correct/: summary.out  z00_z01.map  z00_z01.score  z01_z02.map  z01_z02.score  z02_z03.map  z02_z03.score  z03_z04.map  z03_z04.score  z04_z05.map  z04_z05.score  z05_z06.map  z05_z06.score  z06_z07.map  z06_z07.score  z07_z08.map  z07_z08.score  z08_z09.map  z08_z09.score  z09_z10.map  z09_z10.score  z10_z11.map  z10_z11.score  z11_z12.map  z11_z12.score  z12_z13.map  z12_z13.score  z13_z14.map  z13_z14.score  z14_z15.map  z14_z15.score
checkdir/maps.correct/: summary.out  z00_z01.map  z00_z01.score  z01_z02.map  z01_z02.score  z02_z03.map  z02_z03.score  z03_z04.map  z03_z04.score  z04_z05.map  z04_z05.score  z05_z06.map  z05_z06.score  z06_z07.map  z06_z07.score  z07_z08.map  z07_z08.score  z08_z09.map  z08_z09.score  z09_z10.map  z09_z10.score  z10_z11.map  z10_z11.score  z11_z12.map  z11_z12.score  z12_z13.map  z12_z13.score  z13_z14.map  z13_z14.score  z14_z15.map  z14_z15.score
examples/: apply.sh  find_rst.sh  font.pgm  ortho.sh  register.sh  schedule.lst  zalign.sh
(+25 files in other folders)
